add analysis for crypto

--- a/python-for-finance.ipynb
+++ b/python-for-finance.ipynb
@@ -1641,6 +1641,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.1629338 , 0.1443143 , 0.74187034, 0.04108569, 0.29114197,\n",
+       "       0.24129449, 0.68206534, 0.86734413, 0.31241113, 0.62276382,\n",
+       "       0.25180005, 0.54287029, 0.19592401, 0.57580112, 0.63630863,\n",
+       "       0.30408892, 0.54737876, 0.38929453, 0.68223063, 0.92925828,\n",
+       "       0.10423221, 0.41632396, 0.56973905, 0.33942836, 0.45718048,\n",
+       "       0.59616876, 0.88612479, 0.02901646, 0.2386075 , 0.9081237 ,\n",
+       "       0.81928484, 0.61028914, 0.53649476, 0.92771258, 0.56447863,\n",
+       "       0.60769481, 0.31228531, 0.28644315, 0.64879858, 0.62463987,\n",
+       "       0.26155927, 0.90086947, 0.25926821, 0.42082416, 0.44699444,\n",
+       "       0.9518411 , 0.87340834, 0.37823979, 0.25990488, 0.15335562,\n",
+       "       0.42859274, 0.45700103, 0.13289683, 0.62079207, 0.51249638,\n",
+       "       0.88397083, 0.46463037, 0.44752323, 0.4210216 , 0.62120994,\n",
+       "       0.25596291, 0.87006635, 0.55728549, 0.28501296, 0.02972227,\n",
+       "       0.50652447, 0.82419554, 0.78666626, 0.99514129, 0.72807674,\n",
+       "       0.92341491, 0.33921532, 0.20038431, 0.11286207, 0.80544612,\n",
+       "       0.37253404, 0.38667606, 0.33459165, 0.43080953, 0.24341414,\n",
+       "       0.43760692, 0.76641654, 0.58971165, 0.53989238, 0.79843754,\n",
+       "       0.03675107, 0.59639461, 0.66742045, 0.21194311, 0.7426026 ,\n",
+       "       0.11650647, 0.75227648, 0.19939983, 0.12369281, 0.25747337,\n",
+       "       0.9517694 , 0.20119642, 0.09168876, 0.67748214, 0.07326904])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.random(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
