--- a/stock.ipynb
+++ b/stock.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "      <td>83.150002</td>\n",
        "      <td>84.190002</td>\n",
        "      <td>84.680000</td>\n",
-       "      <td>6029000</td>\n",
+       "      <td>6035900</td>\n",
        "      <td>84.680000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -100,10 +100,10 @@
        "2020-12-15  80.800003  76.000000  80.650002  76.660004  3899900  76.660004\n",
        "2020-12-16  81.809998  77.970001  77.970001  78.830002  3695300  78.830002\n",
        "2020-12-17  82.839996  78.599998  79.410004  82.190002  3776100  82.190002\n",
-       "2020-12-18  86.599998  83.150002  84.190002  84.680000  6029000  84.680000"
+       "2020-12-18  86.599998  83.150002  84.190002  84.680000  6035900  84.680000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "Name: Adj Close, Length: 689, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1275d4f10>"
+       "<matplotlib.legend.Legend at 0x11f574070>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -209,16 +209,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1278f3880>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11f666b50>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "[689 rows x 3 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "HUYA     0.457529  0.501345  1.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "Text(0, 0.5, 'Returns IQ')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -504,25 +504,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1286c7a00>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1288fa400>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1294167f0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x129800be0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1297ea100>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1295ed430>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1295ed520>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1295f69d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x129ab9220>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x11f969400>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11f6dadc0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11f8db550>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11f7a7490>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11f7d68e0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11f806ca0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x11f806d90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11f83f220>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x11f89a8b0>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "    <tr>\n",
        "      <th>2020-12-18</th>\n",
        "      <td>84.680000</td>\n",
-       "      <td>6029000</td>\n",
+       "      <td>6035900</td>\n",
        "      <td>4.074158</td>\n",
        "      <td>0.582014</td>\n",
        "    </tr>\n",
@@ -739,12 +739,12 @@
        "2020-12-15  76.660004   3899900   6.261418   -4.947300\n",
        "2020-12-16  78.830002   3695300   4.871237    1.102989\n",
        "2020-12-17  82.190002   3776100   5.158776    3.500817\n",
-       "2020-12-18  84.680000   6029000   4.074158    0.582014\n",
+       "2020-12-18  84.680000   6035900   4.074158    0.582014\n",
        "\n",
        "[689 rows x 4 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "                ('ridge', Ridge())])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,6 +834,307 @@
     "clfpoly3 = make_pipeline(PolynomialFeatures(3), Ridge())\n",
     "clfpoly3.fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Low</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>09:30:00</th>\n",
+       "      <td>1728.074951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09:31:00</th>\n",
+       "      <td>1726.380127</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09:32:00</th>\n",
+       "      <td>1727.119995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09:33:00</th>\n",
+       "      <td>1725.030151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>09:34:00</th>\n",
+       "      <td>1722.739990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:55:00</th>\n",
+       "      <td>1723.719971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:56:00</th>\n",
+       "      <td>1724.219971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:57:00</th>\n",
+       "      <td>1723.199951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:58:00</th>\n",
+       "      <td>1723.489990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15:59:00</th>\n",
+       "      <td>1723.689941</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>378 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Low\n",
+       "date                 \n",
+       "09:30:00  1728.074951\n",
+       "09:31:00  1726.380127\n",
+       "09:32:00  1727.119995\n",
+       "09:33:00  1725.030151\n",
+       "09:34:00  1722.739990\n",
+       "...               ...\n",
+       "15:55:00  1723.719971\n",
+       "15:56:00  1724.219971\n",
+       "15:57:00  1723.199951\n",
+       "15:58:00  1723.489990\n",
+       "15:59:00  1723.689941\n",
+       "\n",
+       "[378 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "google = yf.Ticker('GOOG')\n",
+    "df = google.history(period='1d', interval=\"1m\")[['Low']]\n",
+    "df['date'] = pd.to_datetime(df.index).time\n",
+    "df.set_index('date', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1723.68994140625, 1723.713382401566)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from statsmodels.tsa.arima.model import ARIMA\n",
+    "y = df['Low'].values\n",
+    "model = ARIMA(y, order=(5,0,1)).fit()\n",
+    "forecast = model.forecast(steps=1)[0]\n",
+    "(y[len(y)-1], forecast)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'zip': '200433',\n",
+       " 'sector': 'Communication Services',\n",
+       " 'fullTimeEmployees': 4791,\n",
+       " 'longBusinessSummary': \"Bilibili Inc. provides online entertainment services for the young generations in the People's Republic of China. It offers a platform that covers a range of genres and media formats, including videos, live broadcasting, and mobile games. Bilibili Inc. has a strategic collaboration agreement with Tencent Holdings Limited for sharing and operating existing and additional anime and games on its platform in China. The company was founded in 2009 and is headquartered in Shanghai, the People's Republic of China.\",\n",
+       " 'city': 'Shanghai',\n",
+       " 'phone': '86 21 2509 9255',\n",
+       " 'country': 'China',\n",
+       " 'companyOfficers': [],\n",
+       " 'website': 'http://www.bilibili.com',\n",
+       " 'maxAge': 1,\n",
+       " 'address1': 'Building 3',\n",
+       " 'industry': 'Electronic Gaming & Multimedia',\n",
+       " 'address2': 'Guozheng Center No. 485 Zhengli Road Yangpu District',\n",
+       " 'previousClose': 87.61,\n",
+       " 'regularMarketOpen': 89.62,\n",
+       " 'twoHundredDayAverage': 48.268345,\n",
+       " 'trailingAnnualDividendYield': None,\n",
+       " 'payoutRatio': 0,\n",
+       " 'volume24Hr': None,\n",
+       " 'regularMarketDayHigh': 90.19,\n",
+       " 'navPrice': None,\n",
+       " 'averageDailyVolume10Day': 4962216,\n",
+       " 'totalAssets': None,\n",
+       " 'regularMarketPreviousClose': 87.61,\n",
+       " 'fiftyDayAverage': 61.618286,\n",
+       " 'trailingAnnualDividendRate': None,\n",
+       " 'open': 89.62,\n",
+       " 'toCurrency': None,\n",
+       " 'averageVolume10days': 4962216,\n",
+       " 'expireDate': None,\n",
+       " 'yield': None,\n",
+       " 'algorithm': None,\n",
+       " 'dividendRate': None,\n",
+       " 'exDividendDate': None,\n",
+       " 'beta': 1.345182,\n",
+       " 'circulatingSupply': None,\n",
+       " 'startDate': None,\n",
+       " 'regularMarketDayLow': 84.83,\n",
+       " 'priceHint': 2,\n",
+       " 'currency': 'USD',\n",
+       " 'regularMarketVolume': 3509470,\n",
+       " 'lastMarket': None,\n",
+       " 'maxSupply': None,\n",
+       " 'openInterest': None,\n",
+       " 'marketCap': 29665269760,\n",
+       " 'volumeAllCurrencies': None,\n",
+       " 'strikePrice': None,\n",
+       " 'averageVolume': 4869242,\n",
+       " 'priceToSalesTrailing12Months': None,\n",
+       " 'dayLow': 84.83,\n",
+       " 'ask': 85.85,\n",
+       " 'ytdReturn': None,\n",
+       " 'askSize': 1800,\n",
+       " 'volume': 3509470,\n",
+       " 'fiftyTwoWeekHigh': 90.19,\n",
+       " 'forwardPE': -119.27777,\n",
+       " 'fromCurrency': None,\n",
+       " 'fiveYearAvgDividendYield': None,\n",
+       " 'fiftyTwoWeekLow': 18.1,\n",
+       " 'bid': 85.81,\n",
+       " 'tradeable': False,\n",
+       " 'dividendYield': None,\n",
+       " 'bidSize': 1300,\n",
+       " 'dayHigh': 90.19,\n",
+       " 'exchange': 'NMS',\n",
+       " 'shortName': 'Bilibili Inc.',\n",
+       " 'longName': 'Bilibili Inc.',\n",
+       " 'exchangeTimezoneName': 'America/New_York',\n",
+       " 'exchangeTimezoneShortName': 'EST',\n",
+       " 'isEsgPopulated': False,\n",
+       " 'gmtOffSetMilliseconds': '-18000000',\n",
+       " 'quoteType': 'EQUITY',\n",
+       " 'symbol': 'BILI',\n",
+       " 'messageBoardId': 'finmb_291855394',\n",
+       " 'market': 'us_market',\n",
+       " 'annualHoldingsTurnover': None,\n",
+       " 'enterpriseToRevenue': None,\n",
+       " 'beta3Year': None,\n",
+       " 'profitMargins': -0.25247,\n",
+       " 'enterpriseToEbitda': None,\n",
+       " '52WeekChange': 3.7510843,\n",
+       " 'morningStarRiskRating': None,\n",
+       " 'forwardEps': -0.72,\n",
+       " 'revenueQuarterlyGrowth': None,\n",
+       " 'sharesOutstanding': 345427008,\n",
+       " 'fundInceptionDate': None,\n",
+       " 'annualReportExpenseRatio': None,\n",
+       " 'bookValue': 2.677,\n",
+       " 'sharesShort': 23897429,\n",
+       " 'sharesPercentSharesOut': 0.0692,\n",
+       " 'fundFamily': None,\n",
+       " 'lastFiscalYearEnd': 1577750400,\n",
+       " 'heldPercentInstitutions': 0.50699,\n",
+       " 'netIncomeToCommon': None,\n",
+       " 'trailingEps': -0.827,\n",
+       " 'lastDividendValue': None,\n",
+       " 'SandP52WeekChange': 0.14628744,\n",
+       " 'priceToBook': 32.080685,\n",
+       " 'heldPercentInsiders': 0.20882,\n",
+       " 'nextFiscalYearEnd': 1640908800,\n",
+       " 'mostRecentQuarter': 1601424000,\n",
+       " 'shortRatio': 3.75,\n",
+       " 'sharesShortPreviousMonthDate': 1604016000,\n",
+       " 'floatShares': 158700544,\n",
+       " 'enterpriseValue': 30777542656,\n",
+       " 'threeYearAverageReturn': None,\n",
+       " 'lastSplitDate': None,\n",
+       " 'lastSplitFactor': None,\n",
+       " 'legalType': None,\n",
+       " 'lastDividendDate': None,\n",
+       " 'morningStarOverallRating': None,\n",
+       " 'earningsQuarterlyGrowth': None,\n",
+       " 'dateShortInterest': 1606694400,\n",
+       " 'pegRatio': 6.06,\n",
+       " 'lastCapGain': None,\n",
+       " 'shortPercentOfFloat': None,\n",
+       " 'sharesShortPriorMonth': 23512765,\n",
+       " 'impliedSharesOutstanding': None,\n",
+       " 'category': None,\n",
+       " 'fiveYearAverageReturn': None,\n",
+       " 'regularMarketPrice': 89.62,\n",
+       " 'logo_url': 'https://logo.clearbit.com/bilibili.com'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bili = yf.Ticker('bili')\n",
+    "bili.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hist = bili.history(period='max')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
